@@ -1,3 +1,7 @@
+* 2014-07-09 - martin.schneider@open-xchange.com
+
+ - Fix for bug 33201: improved output if parameter is missing
+
 * 2014-07-09 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 33485: Don't attempt to delete an empty list of files
